# MeowGB

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  config.example.toml  generate-action-and-tests.sh  generate-action.sh  run-test-roms.sh  rustfmt.toml  tests.md
.forgejo/workflows/: action.yml
.github/workflows/: action.yml
deemgee/: Cargo.toml
deemgee-opcode/: Cargo.toml
deemgee-opcode/src/: lib.rs
deemgee/src/: gameboy.rs  lib.rs  main.rs  settings.rs  window.rs
deemgee/src/gameboy/: cpu.rs  interrupts.rs  joypad.rs  mapper.rs  ppu.rs  serial.rs  sound.rs  timer.rs
deemgee/src/gameboy/cpu/: alu.rs  flow.rs  load_store_move.rs  misc.rs  prefixed.rs
deemgee/src/gameboy/mapper/: mbc1.rs
deemgee/tests/: flow_opcodes.rs  load_store_move_opcodes.rs  misc_opcodes.rs
meowgb/: Cargo.toml
meowgb-core/: Cargo.toml
meowgb-core/src/: gameboy.rs  lib.rs  ringbuffer.rs
meowgb-core/src/gameboy/: bootrom.rs  cpu.rs  dma.rs  interrupts.rs  joypad.rs  mapper.rs  memory.rs  ppu.rs  serial.rs  sound.rs  timer.rs
meowgb-core/src/gameboy/cpu/: alu.rs  load_store_move.rs  misc.rs  prefixed.rs
meowgb-core/src/gameboy/mapper/: mbc1.rs
meowgb-core/tests/: flow_opcodes.rs  load_store_move_opcodes.rs  misc_opcodes.rs
meowgb-opcode/: Cargo.toml
meowgb-opcode/src/: lib.rs
meowgb-tests/: Cargo.toml
meowgb-tests/src/: main.rs
meowgb/src/: config.rs  lib.rs  main.rs  window.rs
meowgb/src/gameboy/: bootrom.rs  interrupts.rs  serial.rs
meowgb/src/gameboy/cpu/: flow.rs
meowgb/src/gameboy/mapper/: mbc1.rs
meowgb/src/window/: events.rs  overlay.rs
meowgb/tests/: flow_opcodes.rs  load_store_move_opcodes.rs  misc_opcodes.rs
src/: gameboy.rs  main.rs  settings.rs  window.rs
src/gameboy/: cpu.rs  interrupts.rs  mapper.rs  memory.rs  ppu.rs
src/gameboy/cpu/: alu.rs  flow.rs  load_store_move.rs  misc.rs  prefixed.rs
test-roms/blargg/: LICENSE
test-roms/hacktix/: README.md
test-roms/mealybug-tearoom-tests/: README.md
test-roms/mooneye-test-suite/: README.md
