[package]
name = "deemgee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
bmp = "0.5.0"
chrono = "0.4.19"
config = "0.11.0"
env_logger = "0.9.0"
log = "0.4.14"
paste = "1.0.6"
pixels = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
sha1 = { version = "0.6.0", features = ["std"] }
thiserror = "1.0.30"
winit = { version = "0.25.0", features = ["serde"] }
winit_input_helper = "0.10.0"
