[package]
name = "meowgb-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
instr-dbg = []

[dependencies]
log = "0.4.14"
paste = "1.0.6"
meowgb-opcode = { path = "../meowgb-opcode" }
bmp = "0.5.0"
thiserror = "1.0.30"