[package]
name = "meowgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0"
chrono = "0.4.19"
clap = { version = "4.4.12", features = ["derive"] }
config = "0.13.4"
meowgb-opcode = { path = "../meowgb-opcode" }
env_logger = "0.10.1"
log = "0.4.14"
paste = "1.0.6"
pixels = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
sha1 = { version = "0.10.6", features = ["std"] }
thiserror = "1.0.30"
winit = { version = "0.29.7", default-features = false, features = ["serde", "rwh_05"] }
winit_input_helper = "0.15.1"
