[package]
name = "meowgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meowgb-core = { path = "../meowgb-core" }
clap = { version = "4.4.12", features = ["derive"] }
config = "0.13.4"
env_logger = "0.10.1"
pixels = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
winit = { version = "0.29.7", default-features = false, features = ["serde", "rwh_05"] }
winit_input_helper = "0.15.1"
log = "0.4.20"
time = "0.3.31"
